fix: zoom dis align-items

--- a/style.css
+++ b/style.css
@@ -20,6 +20,6 @@ a {
   width: 100%;
   /* height: 100vh; */
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
 }
